--- a/styles/custom/vars.scss
+++ b/styles/custom/vars.scss
@@ -1,6 +1,6 @@
 // vars
 :root {
-  --notion-font: 'SpoqaHanSansNeo', 'Tossface';
+  --notion-font: 'SpoqaHanSansNeo', 'Apple Color Emoji', 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;
 
   --base-font-size: 1.125rem;
 
